# hw_30.1

./: .env_sample  .gitignore  Dockerfile  README.md  docker-compose.yml  payment.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: celery.py  settings.py  urls.py
lms/: models.py  serializers.py  tasks.py  tests.py  urls.py  validators.py  views.py
lms/migrations/: 0001_initial.py  0002_course_owner_lesson_owner.py  0003_subscription.py
users/: models.py  services.py  urls.py  views.py
users/management/commands/: csu.py  moder.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_alter_payment_options.py  0004_payment_link_payment_session_id.py
