[tool.poetry]
name = "hw30-1"
version = "0.1.0"
description = ""
authors = ["Nikita <example@mail>"]
readme = "README.md"
packages = [{include = "hw30"}]

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.10"
pillow = "^11.2.1"
black = "^25.1.0"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.0"
isort = "^6.0.1"
ipython = "^9.2.0"
drf-yasg = "^1.21.10"
stripe = "^12.1.0"
forex-python = "^1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
